
Version 0.2.2
--------------

- added --touch option to bakefile
- fixed isdefined() to work with conditional variables (Francesco Montorsi)


Version 0.2.1
--------------

- better error messages in some cases (Francesco Montorsi)
- show detailed backtraces on errors
- added --always-make option to bakefile_gen (Francesco Montorsi)
- added bakefile_gen manpage (Francesco Montorsi)
- autoconf: fixed make distclean for <subproject> targets
- more improvements to the documentation (Warren Young)
- autoconf: respect the LIBS variable (Francesco Montorsi)
- added "once" property to <include> command (Francesco Montorsi)
- implemented uninstall target (Francesco Montorsi)
- added <headers> tag to targets; <headers> rule was removed from
  the 'datafiles' module and any code using it needs to be upgraded to
  use per-target <headers> tag (Francesco Montorsi)
- msvc6prj: fixed _custom_build_files to work with filenames
  containing '-' (Dmitry Kononov)
- msvc*: respect DLLEXT and EXEEXT variables (Dmitry Kononov)
- added bash completion script
- gnu: support DESTDIR variable
- added <define-global-tag> which can be used to define tags with global
  scope; this makes it easy to define new toplevel commands (based on patch
  by Francesco Montorsi)
- added <set-srcdir> for setting SRCDIR variable; it cannot be done manually
  anymore (Francesco Montorsi)
- fixed dependencies handling in bakefile_gen if fileList() is used
- autoconf: compatible with autoconf-2.60
- autoconf: fixed creation of static libraries when using the SunCC
  compiler (Michael Wetherell)
- added Mac OS X package (Kevin Ollivier)
- added --dry-run option to bakefile and --list-files to bakefile_gen
- correctly evaluate per-target variables in <echo> and <error>


Version 0.2.0
--------------

- watcom: more platforms (OS/2, DOS) support
- autoconf: support IBM xlC compiler on Mac OS X
- autoconf: dependencies support for DEC/Compaq/HP cxx compiler (Vadim Zeitlin)